# qiskit-classroom-converter

./: CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  acknowledgement.md  docker-compose.yml  ecosystem.json  example.py  pyproject.toml  qiskit_classroom_converter_public_demo.ipynb  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: python_tox.yml
docs/: index.html  qiskit_class_converter.html  search.js
qiskit_class_converter/: __init__.py
qiskit_class_converter/converters/: base.py  braket_notation_to_matrix.py  braket_notation_to_quantum_circuit.py  matrix_to_quantum_circuit.py  quantum_circuit_to_braket_notation.py  quantum_circuit_to_matrix.py  string_to_braket_notation.py
qiskit_class_converter/converters/preset/: matrices_1bit.json  matrices_2bit.json  matrixs.json
qiskit_class_converter/services/: converter_service.py
scripts/: generate_documents.sh  migration_to_1.0.sh
src/interfaces/: base.py  braket_notation_to_matrix.py  braket_notation_to_quantum_circuit.py  matrix_to_quantum_circuit.py  quantum_circuit_to_braket_notation.py  quantum_circuit_to_matrix.py
tests/: test_convert_class.py  test_converter_service.py  test_quantum_circuit_to_matrix.py
