[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# https://github.com/qiskit-community/ecosystem/issues/462
[tool.setuptools]
py-modules = []
include-package-data = false

[tool.setuptools.packages.find]
include = ['qiskit_class_converter*']
exclude = ['qiskit_class_converter*tests']

[project]
name = "qiskit-classroom-converter"
version = "0.5.0"
authors = [
    { name = "KMU-quantum-classroom" },
]
description = "extend the Qiskit classroom applications."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit==1.0.1",
    "qiskit-aer==0.13.3",
    "loguru==0.7.2",
    "sympy==1.12",
    "antlr4-python3-runtime==4.11",
    "ipython==8.18.1",
    "numpy==1.26.4"
]

[project.optional-dependencies]
dev = [
    "coverage==7.4.3",
    "pylint==3.1.0",
    "tox==4.11.4",
    "build==1.1.1",
    "pdoc==14.4.0",
    "notebook==7.1.1"
]

[project.urls]
"Homepage" = "https://github.com/KMU-quantum-classroom/qiskit-classroom-converter"
"Bug Tracker" = "https://github.com/KMU-quantum-classroom/qiskit-classroom-converter/issues"