[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# https://github.com/qiskit-community/ecosystem/issues/462
[tool.setuptools]
py-modules = []
include-package-data = false

[tool.setuptools.packages.find]
include = ['qiskit_class_converter*']
exclude = ['qiskit_class_converter*tests']

[project]
name = "qiskit-classroom-converter"
version = "0.6.0"
authors = [
    { name = "KMU-quantum-classroom" },
]
description = "extend the Qiskit classroom applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit==1.3.1",
    "qiskit-aer==0.15.1",
    "loguru==0.7.3",
    "sympy==1.13.3",
    "antlr4-python3-runtime==4.11",
    "ipython==8.31.0",
    "numpy==2.2.1",
]

[project.optional-dependencies]
dev = [
    "coverage==7.6.10",
    "pylint==3.3.3",
    "tox==4.23.2",
    "build==1.2.2.post1",
    "pdoc==15.0.1",
    "notebook==7.3.2",
]

[project.urls]
"Homepage" = "https://github.com/KMU-quantum-classroom/qiskit-classroom-converter"
"Bug Tracker" = "https://github.com/KMU-quantum-classroom/qiskit-classroom-converter/issues"